static/css/style.css
/************************************
BOOTSTRAP OVERRIDE START TODO put this in LESS file
*************************************/

.row {
    margin-right: -10px;
    margin-left: -10px;
}

.col-xs-1,
.col-sm-1,
.col-md-1,
.col-lg-1,
.col-xs-2,
.col-sm-2,
.col-md-2,
.col-lg-2,
.col-xs-3,
.col-sm-3,
.col-md-3,
.col-lg-3,
.col-xs-4,
.col-sm-4,
.col-md-4,
.col-lg-4,
.col-xs-5,
.col-sm-5,
.col-md-5,
.col-lg-5,
.col-xs-6,
.col-sm-6,
.col-md-6,
.col-lg-6,
.col-xs-7,
.col-sm-7,
.col-md-7,
.col-lg-7,
.col-xs-8,
.col-sm-8,
.col-md-8,
.col-lg-8,
.col-xs-9,
.col-sm-9,
.col-md-9,
.col-lg-9,
.col-xs-10,
.col-sm-10,
.col-md-10,
.col-lg-10,
.col-xs-11,
.col-sm-11,
.col-md-11,
.col-lg-11,
.col-xs-12,
.col-sm-12,
.col-md-12,
.col-lg-12 {
    position: relative;
    min-height: 1px;
    padding-right: 6px;
    padding-left: 6px;
}

.well {
    padding: 3px;
    margin-bottom: 3px;
}

kbd {
    color: black;
    background-color: transparent;
    border-radius: 0;
    box-shadow: inset 0 0 0 rgba(0, 0, 0, .0);
}

/************************************
BOOTSTRAP OVERRIDE STOP
*************************************/

.tvs-icon {
    color: #000000;
}

.security-icon {
    color: orangered;
    font-size: smaller;
}

.perms-set {
    color: orangered;
}

.perms-modal-inherited-tr {
    opacity: 0.5;
}

.popover {
    z-index: 1100;
}

html {
    position: relative;
    height: 100%;
    overflow: hidden;
}

body {
    position: relative;
    height: 100%;
}

.container-liquid {
    position: relative;
    height: 100%;
    margin: -15px 80px 0 -30%;

}

#content-pane {
    position: relative;
}

.navbar {
    margin-bottom: 0;
    border-radius: 0;
}

.navbar-brand {
    color: #00ace6 !important;
}

.navbar-brand:hover {
    color: #ffffff !important;
}

#tvs-wrapper {
    position: relative;
    height: 100%;
}

#tvs {
    /*position: relative;*/
    height: 100%;
    border-radius: 0;
    background: #565656;
}

.dvs {
    /*position: relative;*/
    border-right: 1px solid #dddddd;
    border-left: 1px solid #dddddd;
    border-bottom: 1px solid #dddddd;
}

#content-pane {
    margin-top: 2px;
    margin-left: 20%;
}

.dvs-tab {
    padding-left: 12px;
    padding-right: 12px;
    background-color: white;
}

.small-caret {
    border-top: 3px solid;
    border-right: 3px solid transparent;
    border-left: 3px solid transparent;
}

.doc-type-selector {
    top: -2px;
    left: 2px;
}

.doc-type-selector > ul > li {
    min-width: 190px;
}

.doc-type-selector > ul > li > a {
    padding: 3px 10px;
}

.dvs-anno-margin {
    padding-right: 10px;
}

.force_re_render_button {
    position: absolute;
}

#pvs-toggle {
    margin: 1px 2px 2px 2px;
}

#pvs-status {
    float: right;
}

#pvs {
    margin-left: -4px;
    margin-right: -11px;
    max-height: 27px;
    height: 27px;
}

#pvs > #properties_view > .nav > li > a {
    padding: 1px 10px 4px 10px;
}

#sync-status {
    margin: 0 2px 0 2px;
    vertical-align: sub;
}

#sync-status i {
    font-size: 18px;
}

#edit-mode {
    display: none;
    margin: 0 2px 0 2px;
    border-radius: 0;
}

i.synchronizing {
    color: skyblue;
}

i.synchronized {
    color: lime;
}

.nav > li > a.pvs-tab {
    padding: 7px 15px;
}

#pvs-container {
}

#pvs-search-results {
    height: 150px;
    max-height: 150px;
    overflow-y: auto;
    overflow-x: hidden;
}

.searching-message {
    font-size: xx-large;
}

#document_text {
    margin-top: 1px;
}

#selected_phrasing_list {
    height: 137px;
}

#pvs-phrasing-buttons {
    vertical-align: top;
}

#pvs_concept_tab > .row {
    margin-bottom: 4px;
}

#pvs_document_tab > .row {
    margin-bottom: 4px;
}

.pvs-properties {
    font-size: smaller;
    padding-left: 0;
    padding-right: 0;
}

.pvs-panel-heading {
    padding: 3px 5px;
}

/*
    get rid of negative left margin on smaller devices
*/
@media (max-width: 767px) {
    div#content-pane.row {
        margin-left: 0;
    }
}

#dvs-tabs {
    position: relative;
}

.form-signin {
    /*max-width: 330px;*/
    width: 30%;
    padding: 15px;
    margin: auto auto;
}

.register-textbox {

    margin-left: auto;
    margin-right: auto;
}

.error-blurb {
    /*width: 65%;*/
}

#error-block {
    /*width: 30%;*/
    /*padding: 15px;*/
    /*margin-left: auto;*/
    /*margin-right: auto;*/
}

.form-signin .form-signin-heading,
.form-signin .checkbox {
    margin-bottom: 10px;
}

.form-signin .checkbox {
    font-weight: normal;
}

.form-signin .form-control {
    position: relative;
    font-size: 16px;
    height: auto;
    padding: 10px;
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
}

.form-signin .form-control:focus {
    z-index: 2;
}

.form-signin input[type="text"] {
    margin-bottom: -1px;
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.form-signin input[type="password"] {
    margin-bottom: 10px;
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.center-vertical-div {
    display: table-cell;
    vertical-align: middle;
}

.subscription-option {
    /*margin-top: 200px;*/
    width: 100%;
}

.strikeout {
    position: relative;

}

.strikeout::after {
    border-bottom: 4px solid red;
    content: "";
    left: 0;
    position: absolute;
    right: 0;
    top: 50%;
    margin-right: -20px;
    margin-left: -20px;
}

.price {
    height: 250%;
    font-size: 7em;
}

.discount-price {
    margin-bottom: 0;
    font-size: 4em;
}

#signup-heading {
    color: white;
    font-size: 10em;
}

#signup-subheading {
    color: white;
    font-size: 2em;
    /*margin-top: 6%;*/
}

.plan-heading {
    margin-top: 0;
}

.subscribe-btn {
    position: relative;
}

.center {
    margin-left: auto;
    margin-right: auto;
}

.text-align-center {
    line-height: normal;
    text-align: center;
}

.table-striped tbody tr.highlight td {
    background-color: #FFFF00;
}

.user_info_group_list {
    overflow-y: auto;
    max-height: 250px;

}

.modal_dialog_size {
    min-height: 400px;
}
/* ... */

